Correction d'erreurs dans les textes

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <header class="section-header">
           <h3 class="small-title">Notre mission</h3>
-          <p>L'ADEPT est une des plus grandes organisations étudiantes du cégep Édouard-Montpetit et nous faisons de notre meilleur afin d'être celle qui aide le mieux ces membres aussi!</p>
+          <p>L'ADEPT est une des plus grandes organisations étudiantes du cégep Édouard-Montpetit et nous faisons de notre mieux afin d'être celle qui aide le mieux ses membres !</p>
 
           </header>
 
@@ -226,7 +226,7 @@
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
             <h4 class="title"><a href="https://discord.gg/7ycpHGe">Discord</a></h4>
-            <p class="description">Rejoignez le serveur discord où les élèves de la technique sont réunis afin de s'entre aider et s'amuser ensemble.</p>
+            <p class="description">Rejoignez le serveur discord où les élèves de la technique sont réunis afin de s'entraider et s'amuser ensemble.</p>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
@@ -236,12 +236,12 @@
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-paper-outline"></i></div>
             <h4 class="title"><a href="www.lanadept.com">LAN</a></h4>
-            <p class="description">Le LAN de l'ADEPT est un événement Biannuel qui a lieu durant la semaine d'étude du cégep Édouard Mont-Petit où se regroupent des adeptes de jeux vidéo de partout au Québec!</p>
+            <p class="description">Le LAN de l'ADEPT est un événement biannuel qui a lieu durant la semaine de relâche et où se regroupent des adeptes de jeux vidéo de partout au Québec!</p>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
             <h4 class="title"><a href="">Frigo</a></h4>
-            <p class="description">Vous êtes presser? Vous ne voulez pas faire le fil à la cafeteria? Passer juste à cote à l'ADEPT pour vous acheter un petit quelque chose et contribuez à l'autofinancement!</p>
+            <p class="description">Vous êtes pressés ou vous ne voulez pas faire la file à la caféteria? Vous n'avez qu'a venir nous vois, juste à coté, à l'ADEPT pour vous acheter un petit quelque chose et contribuer à notre autofinancement!</p>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-barcode-outline"></i></div>
@@ -265,7 +265,7 @@
     <section id="call-to-action" class="wow fadeIn">
       <div class="container text-center">
         <h3>Le LAN de l'ADEPT</h3>
-        <p> Le LAN de l'ADEPT est un événement Biannuel qui a lieu durant la semaine d'étude du cégep Édouard Mont-Petit où se regroupent des adeptes de jeux vidéo de partout au Québec!</p>
+        <p> Le LAN de l'ADEPT est un événement biannuel qui a lieu durant la semaine d'étude du cégep Édouard Mont-Petit où se regroupent des adeptes de jeux vidéo de partout au Québec!</p>
         <a class="cta-btn" href="lan.adeptinfo.ca">En savoir plus</a>
       </div>
     </section><!-- #call-to-action -->
@@ -386,7 +386,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Amanda Jepson</h4>
-                  <span>Secretaire</span>
+                  <span>Secretaire interne</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
@@ -404,7 +404,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Amanda Jepson</h4>
-                  <span>Tresorier</span>
+                  <span>Trésorier</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
@@ -429,7 +429,7 @@
 
         <div class="section-header">
           <h3>Contactez-nous</h3>
-          <p>Venez nous voir en personne dans le local de l'ADEPT, dans le couloir des locaux d'informatique!</p>
+          <p>Venez nous voir en personne au local de l'ADEPT, c'est dans la caféteria au local F-041!</p>
         </div>
 
         <div class="row contact-info">
@@ -438,7 +438,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Adresse</h3>
-              <address>945 chemin Chambly, F-041, Longueuil, Quebec</address>
+              <address>945 chemin Chambly, local F-041, Longueuil, Quebec</address>
             </div>
           </div>
 
@@ -461,7 +461,7 @@
         </div>
 
         <div class="form">
-          <div id="sendmessage">Your message has been sent. Thank you!</div>
+          <div id="sendmessage">Votre message a été envoyé. Merci!</div>
           <div id="errormessage"></div>
           <form action="" method="post" role="form" class="contactForm">
             <div class="form-row">
@@ -522,7 +522,7 @@
 			  F-041, Longueuil<br>
 			  Quebec, Canada <br>
               <strong>Phone:</strong> +1 (450) 679-2631<br>
-              <strong>Email:</strong> adept.informatique.cem@gmail.com<br>
+              <strong>Email:</strong><a href="mailto:adept.informatique.cem@gmail.com">adept.informatique.cem@gmail.com</a><br>
             </p>
 
             <div class="social-links">
@@ -539,19 +539,18 @@
 
           <div class="col-lg-3 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Inscrivez-vous afin de recevoir des nouvelles à propos de nos événements, activités ou autres informations à propos de l'ADEPT.</p>
+            <p>Inscrivez-vous afin de recevoir des nouvelles de nos événements et activités ou d'autres informations à propos de l'ADEPT.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit"  value="Subscribe">
             </form>
           </div>
-
         </div>
       </div>
     </div>
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright 2018 <strong class="green">ADEPT Informatique</strong>. Tous droits réservés
+        &copy; Copyright 2018 <strong class="green">ADEPT Informatique</strong>. Tous droits réservés.
       </div>
       <div class="credits">
         <!--
