--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
             <h4 class="title"><a href="">Frigo</a></h4>
-            <p class="description">Vous êtes pressés ou vous ne voulez pas faire la file à la caféteria? Vous n'avez qu'a venir nous vois, juste à coté, à l'ADEPT pour vous acheter un petit quelque chose et contribuer à notre autofinancement!</p>
+            <p class="description">Vous êtes pressé ou vous ne voulez pas faire la file à la caféteria? Vous n'avez qu'a passer à l'ADEPT, juste à coté, pour vous acheter un petit quelque chose et contribuer à notre autofinancement!</p>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-barcode-outline"></i></div>
