--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!--==========================
-        HEADER
+        Entête
         ============================-->
     <header id="header">
       <div class="container-fluid">
@@ -37,14 +37,6 @@
             <li><a href="#about">Qui sommes nous</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#team">Membres du conseil</a></li>
-            <!--<li class="menu-has-children"><a href="">Drop Down</a>-->
-            <!--<ul>-->
-            <!--<li><a href="#">Drop Down 1</a></li>-->
-            <!--<li><a href="#">Drop Down 3</a></li>-->
-            <!--<li><a href="#">Drop Down 4</a></li>-->
-            <!--<li><a href="#">Drop Down 5</a></li>-->
-            <!--</ul>-->
-            <!--</li>-->
             <li><a href="#contact">Contact</a></li>
             <li><a href="http://lan.adeptinfo.ca">LAN de L'ADEPT</a></li>
           </ul>
@@ -106,7 +98,7 @@
     <!-- #intro -->
     <main id="main">
       <!--==========================
-          SECTION : À PROPOS
+          SECTION À PROPOS
           ============================-->
       <section id="about">
         <div class="container">
@@ -156,7 +148,7 @@
       </section>
       <!-- #about -->
       <!--==========================
-          Featured Services Section
+            Section Suis-je membre
           ============================-->
       <section id="featured-services">
         <div class="container">
@@ -181,7 +173,7 @@
       </section>
       <!-- #featured-services -->
       <!--==========================
-          Services Section
+          Section des services
       ============================-->
       <section id="services">
         <div class="container">
@@ -189,43 +181,44 @@
             <h3>Nos services</h3>
             <p> </p>
           </header>
+            
           <div class="row">
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
-              <div class="icon"><i class="ion-chatbubble"></i></div>
-              <h4 class="title"><a href="https://discord.gg/7ycpHGe">Serveur Discord</a></h4>
-              <p class="description">Rejoignez le serveur discord où les élèves de la technique sont réunis afin de s'entraider et s'amuser ensemble.</p>
+                <div class="icon"><i class="ion-android-happy"></i></div>
+                <h4 class="title">Le local</h4>
+                <p class="description">Notre local est un endroit parfait pour diner, relaxer ou rencontrer de nouvelles personnes de la technique, et attention : nous avons un micro-ondes ! Vous êtes donc les bienvenus à vos pause ou durant le diner !</p>
+            </div>
+            <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
+                <div class="icon"><i class="ion-ios-game-controller-b"></i></div>
+                <h4 class="title"><a href="http://lan.adeptinfo.ca">LAN</a></h4>
+                <p class="description">Nous organisons à chaque session le LAN de l'ADEPT; un événement de jeux en réseau qui se déroule ici même au cégep et qui regroupe des adeptes de jeux vidéo de partout au Québec!</p>
             </div>
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
               <div class="icon"><i class="ion-tshirt-outline"></i></div>
               <h4 class="title"><a href="http://adeptinfo.ca/hoodies/">Hoodies officiels</a></h4>
-              <p class="description">Une fois par session vous aurez la chance de vous procurer un hoodie génial réservé aux membres des deux techniques!</p>
-            </div>
-            <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
-              <div class="icon"><i class="ion-ios-game-controller-b"></i></div>
-              <h4 class="title"><a href="http://lan.adeptinfo.ca">LAN</a></h4>
-              <p class="description">Le LAN de l'ADEPT est un événement biannuel qui a lieu durant la semaine de relâche et où se regroupent des adeptes de jeux vidéo de partout au Québec!</p>
+              <p class="description">Une fois par session vous aurez la chance de vous procurer un hoodie officiel et génial réservé aux membres des deux techniques! En plus, il est super confortable !<br />Plus de détails <a href="./hoodies">ici</a>.</p>
             </div>
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
               <div class="icon"><i class="ion-pizza"></i></div>
               <h4 class="title">Frigo et collation</h4>
-              <p class="description">Vous êtes pressé ou vous ne voulez pas faire la file à la caféteria? Vous n'avez qu'a passer à l'ADEPT, juste à coté, pour vous acheter un petit quelque chose et contribuer à notre autofinancement!</p>
+              <p class="description">Vous êtes pressé ou vous ne voulez pas faire la file à la caféteria? Ça tombe pien car nous avons justement un frigo plein pour vous dépanner! De nombreux brevages et collations sont disponnible à faible prix !</p>
             </div>
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
               <div class="icon"><i class="ion-ios-monitor"></i></div>
               <h4 class="title">Ordinateurs disponibles</h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p class="description">Aucun labo n'est disponnible ? Pas de problème, nos ordinateurs sont munis des mêmes logiciels que les ordinateurs du département. Vous pourrez donc continuer vos travaux sans tracas !</p>
             </div>
-            <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-              <div class="icon"><i class="ion-android-happy"></i></div>
-              <h4 class="title">Social</h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-            </div>
+              <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
+                  <div class="icon"><i class="ion-chatbubble"></i></div>
+                  <h4 class="title"><a href="https://discord.gg/7ycpHGe">Serveur Discord</a></h4>
+                  <p class="description">Rejoignez le serveur discord où les élèves de la technique sont réunis afin de s'entraider et s'amuser ensemble.</p>
+              </div>
           </div>
         </div>
       </section>
       <!-- #services -->
       <!--==========================
-          Call To Action Section
+          Pub Lan de l'adept
           ============================-->
       <section id="call-to-action" class="wow fadeIn">
         <div class="container text-center">
@@ -236,7 +229,7 @@
       </section>
       <!-- #call-to-action -->
       <!--==========================
-          Facts Section
+         Statistiques
           ============================-->
       <section id="facts"  class="wow fadeIn">
         <div class="container">
@@ -367,7 +360,7 @@
       </section>
       <!-- #team -->
       <!--==========================
-          Contact Section
+          Section de contact
           ============================-->
       <section id="contact" class="section-bg wow fadeInUp">
         <div class="container">
@@ -431,7 +424,7 @@
       <!-- #contact -->
     </main>
     <!--==========================
-        Footer
+        Pied de page
         ============================-->
     <footer id="footer">
       <div class="footer-top">
