Ajout de la photo du VP + modification de certains textes

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="container">
           <header class="section-header">
             <h3 class="small-title">Notre mission</h3>
-            <p>L'ADEPT est une des plus grandes organisations étudiantes du cégep Édouard-Montpetit et nous faisons de notre maximum afin d'être celle qui aide le mieux ses membres !</p>
+            <p>L'ADEPT est une des plus grandes organisations étudiantes du cégep Édouard-Montpetit<br /> et nous faisons notre maximum afin d'être celle qui aide le mieux ses membres !</p>
           </header>
           <div class="row about-cols">
             <div class="col-md-4 wow fadeInUp">
@@ -181,7 +181,7 @@
             <h3>Nos services</h3>
             <p> </p>
           </header>
-            
+
           <div class="row">
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                 <div class="icon"><i class="ion-android-happy"></i></div>
@@ -223,7 +223,7 @@
       <section id="call-to-action" class="wow fadeIn">
         <div class="container text-center">
           <h3>Le LAN de l'ADEPT</h3>
-          <p> Le LAN de l'ADEPT est un événement biannuel qui a lieu durant la semaine d'étude du cégep Édouard Mont-Petit où se regroupent des adeptes de jeux vidéo de partout au Québec!</p>
+          <p> Le LAN de l'ADEPT est un événement biannuel qui a lieu durant à toutes les session au cours de la semaine d'étude du cégep Édouard Mont-Petit. L'évennement regroupent des adeptes de jeux vidéo de partout au Québec !</p>
           <a class="cta-btn" href="http://lan.adeptinfo.ca">En savoir plus</a>
         </div>
       </section>
@@ -239,20 +239,20 @@
           </header>
           <div class="row counters">
             <div class="col-lg-3 col-6 text-center">
-              <span data-toggle="counter-up">36</span>
-              <p>Membres actifs</p>
-            </div>
-            <div class="col-lg-3 col-6 text-center">
-              <span data-toggle="counter-up">420</span>
-              <p>Projects</p>
-            </div>
-            <div class="col-lg-3 col-6 text-center">
               <span data-toggle="counter-up">256</span>
-              <p>Élèves dans la technique</p>
+              <p>membres</p>
             </div>
             <div class="col-lg-3 col-6 text-center">
-              <span data-toggle="counter-up">10</span>
-              <p>Hard Workers</p>
+              <span data-toggle="counter-up">20</span>
+              <p>ans d'activités</p>
+            </div>
+            <div class="col-lg-3 col-6 text-center">
+              <span data-toggle="counter-up">32</span>
+              <p>LAN organisés</p>
+            </div>
+            <div class="col-lg-3 col-6 text-center">
+              <span data-toggle="counter-up">2354</span>
+              <p>pogos vendus</p>
             </div>
           </div>
           <div class="facts-img">
@@ -273,7 +273,7 @@
           <div class="row">
             <div class="col-md-2 offset-md-1 wow fadeInUp">
               <div class="member">
-                <img src="img/team-1.jpg" class="img-fluid" alt="">
+                <img src="img/president.jpg" class="img-fluid" alt="">
                 <div class="member-info">
                   <div class="member-info-content">
                     <h4>Walter White</h4>
@@ -290,16 +290,16 @@
             </div>
             <div class="col-md-2 wow fadeInUp" data-wow-delay="0.1s">
               <div class="member">
-                <img src="img/team-2.jpg" class="img-fluid" alt="">
+                <img src="img/vpresident.jpg" class="img-fluid" alt="">
                 <div class="member-info">
                   <div class="member-info-content">
                     <h4>Matei Martin</h4>
                     <span>Vice President</span>
                     <div class="social">
-                      <a href=""><i class="fa fa-twitter"></i></a>
-                      <a href=""><i class="fa fa-facebook"></i></a>
+                      <!-- <a href=""><i class="fa fa-twitter"></i></a>
+                      <a href=""><i class="fa fa-facebook"></i></a> -->
                       <a href="https://github.com/HandsomeRomanian"><i class="fa fa-github"></i></a>
-                      <a href=""><i class="fa fa-linkedin"></i></a>
+                      <!-- <a href=""><i class="fa fa-linkedin"></i></a> -->
                     </div>
                   </div>
                 </div>
@@ -307,15 +307,16 @@
             </div>
             <div class="col-md-2 wow fadeInUp" data-wow-delay="0.2s">
               <div class="member">
-                <img src="img/team-3.jpg" class="img-fluid" alt="">
+                <img src="img/externe.jpg" class="img-fluid" alt="">
                 <div class="member-info">
                   <div class="member-info-content">
                     <h4>Olivier<br>Brassard</h4>
                     <span>Externe</span>
                     <div class="social">
-                      <a href=""><i class="fa fa-twitter"></i></a>
+                      <!-- <a href=""><i class="fa fa-twitter"></i></a> -->
+                      <!-- <a href=""><i class="fa fa-facebook"></i></a> -->
                       <a href="https://github.com/obrassard"><i class="fa fa-github"></i></a>
-                      <a href=""><i class="fa fa-linkedin"></i></a>
+                      <a href="https://www.linkedin.com/in/obrassard/"><i class="fa fa-linkedin"></i></a>
                     </div>
                   </div>
                 </div>
@@ -323,10 +324,10 @@
             </div>
             <div class="col-md-2 wow fadeInUp" data-wow-delay="0.3s">
               <div class="member">
-                <img src="img/team-4.jpg" class="img-fluid" alt="">
+                <img src="img/interne.jpg" class="img-fluid" alt="">
                 <div class="member-info">
                   <div class="member-info-content">
-                    <h4>Amanda Jepson</h4>
+                    <h4>Jasmin Papierz-Lambert</h4>
                     <span>Secretaire interne</span>
                     <div class="social">
                       <a href=""><i class="fa fa-twitter"></i></a>
@@ -340,10 +341,10 @@
             </div>
             <div class="col-md-2 wow fadeInUp" data-wow-delay="0.3s">
               <div class="member">
-                <img src="img/team-5.jpg" class="img-fluid" alt="">
+                <img src="img/tresorier.jpg" class="img-fluid" alt="">
                 <div class="member-info">
                   <div class="member-info-content">
-                    <h4>Amanda Jepson</h4>
+                    <h4>Gabriel Lemire</h4>
                     <span>Trésorier</span>
                     <div class="social">
                       <a href=""><i class="fa fa-twitter"></i></a>
