Ajout des 3 miages images pour la section mission

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   </div>
                 </div>
                 </div> -->
-          </div>
+          <!-- </div>
           <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Précédent</span>
@@ -92,7 +92,7 @@
             <span class="carousel-control-next-icon ion-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Suivant</span>
           </a>
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- #intro -->
@@ -243,7 +243,7 @@
               <p>Membres</p>
             </div>
             <div class="col-lg-3 col-6 text-center">
-              <span data-toggle="counter-up">13</span>
+              <span data-toggle="counter-up">31</span>
               <p>Ans d'activité</p>
             </div>
             <div class="col-lg-3 col-6 text-center">
@@ -255,9 +255,9 @@
               <p>Pogos vendus</p>
             </div>
           </div>
-          <div class="facts-img">
+          <!-- <div class="facts-img">
             <img src="img/facts-img.png" alt="" class="img-fluid">
-          </div>
+          </div> -->
         </div>
       </section>
       <!-- #facts -->
