Modification de la pub du LAN et de certaines images + ajout de remerciements

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="col-md-4 wow fadeInUp">
               <div class="about-col">
                 <div class="img">
-                  <img src="img/about-mission.jpg" alt="" class="img-fluid">
+                  <img src="img/communaute.jpg" alt="" class="img-fluid">
                   <div class="icon"><i class="ion-ios-people" ></i></div>
                 </div>
                 <h2 class="title"><a href="#">Créer une communauté</a></h2>
@@ -122,24 +122,24 @@
             <div class="col-md-4 wow fadeInUp" data-wow-delay="0.1s">
               <div class="about-col">
                 <div class="img">
-                  <img src="img/about-plan.jpg" alt="" class="img-fluid">
+                  <img src="img/adept-hero.jpg" alt="" class="img-fluid">
                   <div class="icon"><i class="fa fa-gavel" style="font-size: 30px"></i></div>
                 </div>
                 <h2 class="title"><a href="#">Défendre vos droits</a></h2>
                 <p class="description">
-                  Nous représentons tous nos membres auprès de l'AGECEM et défendons leurs droits aux points de vue physique, moral, social, intellectuel et pédagogique.
+                  Nous représentons tous nos membres auprès de l'AGECEM et afin de défendre leurs droits aux points de vue physique, moral, social, intellectuel et pédagogique.
                 </p>
               </div>
             </div>
             <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
               <div class="about-col">
                 <div class="img">
-                  <img src="img/about-vision.jpg" alt="" class="img-fluid">
+                  <img src="img/hoodie-promo.jpg" alt="" class="img-fluid">
                   <div class="icon"><i class="ion-arrow-graph-up-right"></i></div>
                 </div>
                 <h2 class="title"><a href="#">Promouvoir le programme</a></h2>
                 <p class="description">
-                    Nous contribuons à promouvoir les techniques informatiques en organisant des activités - tel que le LAN de l'ADEPT et en informant les aux autres étudiants du Cégep.
+                    Nous contribuons à promouvoir les techniques informatiques du cégep en organisant des activités telles que le LAN et en diffusant de l'information sur le sujet.
                 </p>
               </div>
             </div>
@@ -186,12 +186,12 @@
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                 <div class="icon"><i class="ion-android-happy"></i></div>
                 <h4 class="title">Le local</h4>
-                <p class="description">Notre local est un endroit parfait pour diner, relaxer ou rencontrer de nouvelles personnes de la technique, et attention : nous avons un micro-ondes ! Vous êtes donc les bienvenus à vos pause ou durant le diner !</p>
+                <p class="description">Notre local est un endroit parfait pour diner, relaxer ou rencontrer de nouvelles personnes de la technique. En plus, nous avons un micro-ondes ! Vous êtes donc les bienvenus à vos pause et durant le diner !</p>
             </div>
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                 <div class="icon"><i class="ion-ios-game-controller-b"></i></div>
                 <h4 class="title"><a href="http://lan.adeptinfo.ca">LAN</a></h4>
-                <p class="description">Nous organisons à chaque session le LAN de l'ADEPT; un événement de jeux en réseau qui se déroule ici même au cégep et qui regroupe des adeptes de jeux vidéo de partout au Québec!</p>
+                <p class="description">Nous organisons à chaque session le LAN de l'ADEPT : un événement de jeux en réseau qui se déroule ici même au cégep et qui regroupe des adeptes de jeux vidéo de partout au Québec!</p>
             </div>
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
               <div class="icon"><i class="ion-tshirt-outline"></i></div>
@@ -222,8 +222,8 @@
           ============================-->
       <section id="call-to-action" class="wow fadeIn">
         <div class="container text-center">
-          <h3>Le LAN de l'ADEPT</h3>
-          <p> Le LAN de l'ADEPT est un événement biannuel qui a lieu durant à toutes les session au cours de la semaine d'étude du cégep Édouard Mont-Petit. L'évennement regroupent des adeptes de jeux vidéo de partout au Québec !</p>
+          <img src="./img/logo-lan.png" id="logo-lan" />
+          <p>Le LAN de l'ADEPT est un événement biannuel qui a lieu à toutes les sessions au cours de la semaine d'étude du cégep Édouard Mont-Petit. L'évennement regroupe des adeptes de jeux vidéo de partout au Québec !</p>
           <a class="cta-btn" href="http://lan.adeptinfo.ca">En savoir plus</a>
         </div>
       </section>
@@ -481,14 +481,7 @@
           &copy; Copyright 2018 <strong class="green">ADEPT Informatique</strong>. Tous droits réservés.
         </div>
         <div class="credits">
-          <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
-
-              <Best <a href="https://bootstrapmade.com/">Bootstrap Templates</a> by BootstrapMade
-              -->
+            Ce site web est <a href="https://github.com/adept-informatique/adeptinfo.ca">open-source</a>. Merci à <a href="https://github.com/ADEPT-Informatique/adeptinfo.ca#remerciements">tous ceux qui y ont collaborés</a> !
         </div>
       </div>
     </footer>
