--- a/lan/index.html
+++ b/lan/index.html
@@ -53,7 +53,7 @@
               <div class="carousel-container">
                 <div class="carousel-content">
                   <div class="text-center">
-                    <img src="../img/hoodies/badge.png" width="150">
+                    <img src="../img/logo-lan.png" width="250" style="margin-bottom:20px">
                   </div>
                   <h2>Le site web du LAN de l'ADEPT<br>se refait une beauté!</h2>
                   <hr>
