Ajout de la photo du trésorier + correction de typos

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="carousel-content">
                   <h2>Bienvenue à l'ADEPT</h2>
                   <p>L'ADEPT, c'est l'Association Des Étudiants et Étudiantes du Programme de Technique Informatique du Cégep Édouard-Montpetit.
-                    <br /><strong>Venez nous voir, nous sommes au local F-041 situé dans la caféteria !</strong>
+                    <br /><strong>Venez nous voir, nous sommes au local F-041 situé dans la cafeteria !</strong>
                   </p>
                   <a href="#about" class="btn-get-started scrollto">Découvrir l'ADEPT</a>
                 </div>
@@ -154,7 +154,7 @@
         <div class="container">
           <header class="section-header">
             <h3>Suis-je membre de l'ADEPT ?</h3>
-            <p class="text-center description">Si tu es inscrit dans un programme de Technique Informatique du Cégep Édouard-Montpetit, tu es membre de l'ADEPT !</p>
+            <p class="text-center description">Si tu es inscrit dans un programme de technique informatique du Cégep Édouard-Montpetit, tu es membre de l'ADEPT !</p>
           </header>
           <div class="row">
             <div class="col-lg-6 box">
@@ -165,7 +165,7 @@
             <hr class="">
             <div class="col-lg-6 box box-bg">
               <h2 class="text-center"><i class="fa fa-server"></i></h2>
-              <h4 class="title text-center"><span class="white">Gestion de Réseaux Informatique</span></h4>
+              <h4 class="title text-center"><span class="white">Gestion de Réseaux Informatiques</span></h4>
               <!--<p class="description text-center">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>-->
             </div>
           </div>
@@ -186,12 +186,12 @@
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                 <div class="icon"><i class="ion-android-happy"></i></div>
                 <h4 class="title">Le local</h4>
-                <p class="description">Notre local est un endroit parfait pour diner, relaxer ou rencontrer de nouvelles personnes de la technique. En plus, nous avons un micro-ondes ! Vous êtes donc les bienvenus à vos pause et durant le diner !</p>
+                <p class="description">Notre local est un endroit parfait pour dîner, relaxer ou rencontrer de nouvelles personnes de la technique. En plus, nous avons un micro-ondes ! Vous êtes donc les bienvenus à vos pauses et durant le dîner !</p>
             </div>
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                 <div class="icon"><i class="ion-ios-game-controller-b"></i></div>
                 <h4 class="title"><a href="http://lan.adeptinfo.ca">LAN</a></h4>
-                <p class="description">Nous organisons à chaque session le LAN de l'ADEPT : un événement de jeux en réseau qui se déroule ici même au cégep et qui regroupe des adeptes de jeux vidéo de partout au Québec!</p>
+                <p class="description">Nous organisons chaque session le LAN de l'ADEPT : un événement de jeux en réseau qui se déroule ici même au cégep et qui regroupe des adeptes de jeux vidéo de partout au Québec!</p>
             </div>
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
               <div class="icon"><i class="ion-tshirt-outline"></i></div>
@@ -200,18 +200,18 @@
             </div>
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
               <div class="icon"><i class="ion-pizza"></i></div>
-              <h4 class="title">Frigo et collation</h4>
-              <p class="description">Vous êtes pressé ou vous ne voulez pas faire la file à la caféteria? Ça tombe pien car nous avons justement un frigo plein pour vous dépanner! De nombreux brevages et collations sont disponnible à faible prix !</p>
+              <h4 class="title">Frigo et collations</h4>
+              <p class="description">Vous êtes pressé ou vous ne voulez pas faire la file à la cafeteria? Ça tombe bien car nous avons justement un frigo plein pour vous dépanner! De nombreux breuvages et collations sont disponible à faible prix !</p>
             </div>
             <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
               <div class="icon"><i class="ion-ios-monitor"></i></div>
               <h4 class="title">Ordinateurs disponibles</h4>
-              <p class="description">Aucun labo n'est disponnible ? Pas de problème, nos ordinateurs sont munis des mêmes logiciels que les ordinateurs du département. Vous pourrez donc continuer vos travaux sans tracas !</p>
+              <p class="description">Aucun labo n'est disponible ? Pas de problème, nos ordinateurs sont munis des mêmes logiciels que les ordinateurs du département. Vous pourrez donc continuer vos travaux sans tracas !</p>
             </div>
               <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
                   <div class="icon"><i class="ion-chatbubble"></i></div>
                   <h4 class="title"><a href="https://discord.gg/7ycpHGe">Serveur Discord</a></h4>
-                  <p class="description">Rejoignez le serveur discord où les élèves de la technique sont réunis afin de s'entraider et s'amuser ensemble.</p>
+                  <p class="description">Rejoignez notre serveur Discord où les élèves de la technique sont réunis afin de s'entraider et s'amuser ensemble.</p>
               </div>
           </div>
         </div>
@@ -223,7 +223,10 @@
       <section id="call-to-action" class="wow fadeIn">
         <div class="container text-center">
           <img src="./img/logo-lan.png" id="logo-lan" />
-          <p>Le LAN de l'ADEPT est un événement biannuel qui a lieu à toutes les sessions au cours de la semaine d'étude du cégep Édouard Mont-Petit. L'évennement regroupe des adeptes de jeux vidéo de partout au Québec !</p>
+          <div class="col-md-8 offset-md-2">
+              <p>Le LAN de l'ADEPT est un événement bisannuel qui a lieu au cours de la semaine d'étude du cégep Édouard-Montpetit. Instauré par un petit groupe de 20 personnes en 2014 et amélioré à chaque édition, l'événement regroupe désormais près de 250 adeptes de jeux vidéo de partout au Québec chaque session!</p>
+          </div>
+
           <a class="cta-btn" href="http://lan.adeptinfo.ca">En savoir plus</a>
         </div>
       </section>
@@ -251,7 +254,7 @@
               <p>LAN organisés</p>
             </div>
             <div class="col-lg-3 col-6 text-center">
-              <span data-toggle="counter-up">957</span>
+              <span data-toggle="counter-up">752</span>
               <p>Pogos vendus</p>
             </div>
           </div>
@@ -268,7 +271,7 @@
         <div class="container">
           <div class="section-header wow fadeInUp">
             <h3>Membres du Conseil d'Administration</h3>
-            <p>Voici les membres du Conseil d'Administration de votre association qui sont en fonction pour la session.<br><strong>N'hésitez pas à allez leur parler ou à leur poser des questions, ils sont là pour vous aider!</strong></p>
+            <p>Voici les membres du Conseil d'Administration de votre association qui sont en fonction pour la session.<br><strong>N'hésitez pas à aller leur parler ou à leur poser des questions, ils sont là pour vous aider!</strong></p>
           </div>
           <div class="row">
             <div class="col-md-2 offset-md-1 wow fadeInUp">
@@ -277,12 +280,12 @@
                 <div class="member-info">
                   <div class="member-info-content">
                     <h4>Jonathan Tremblay</h4>
-                    <span>President</span>
+                    <span>Président</span>
                     <div class="social">
-                      <a href=""><i class="fa fa-twitter"></i></a>
+                      <!-- <a href=""><i class="fa fa-twitter"></i></a>
                       <a href=""><i class="fa fa-facebook"></i></a>
                       <a href=""><i class="fa fa-github"></i></a>
-                      <a href=""><i class="fa fa-linkedin"></i></a>
+                      <a href=""><i class="fa fa-linkedin"></i></a> -->
                     </div>
                   </div>
                 </div>
@@ -294,7 +297,7 @@
                 <div class="member-info">
                   <div class="member-info-content">
                     <h4>Matei Martin</h4>
-                    <span>Vice President</span>
+                    <span>Vice Président</span>
                     <div class="social">
                       <!-- <a href=""><i class="fa fa-twitter"></i></a>
                       <a href=""><i class="fa fa-facebook"></i></a> -->
@@ -311,7 +314,7 @@
                 <div class="member-info">
                   <div class="member-info-content">
                     <h4>Olivier<br>Brassard</h4>
-                    <span>Externe</span>
+                    <span>Secrétaire Externe</span>
                     <div class="social">
                       <!-- <a href=""><i class="fa fa-twitter"></i></a> -->
                       <!-- <a href=""><i class="fa fa-facebook"></i></a> -->
@@ -328,12 +331,12 @@
                 <div class="member-info">
                   <div class="member-info-content">
                     <h4>Jasmin Papierz-Lambert</h4>
-                    <span>Secretaire interne</span>
+                    <span>Secrétaire interne</span>
                     <div class="social">
-                      <a href=""><i class="fa fa-twitter"></i></a>
+                      <!-- <a href=""><i class="fa fa-twitter"></i></a>
                       <a href=""><i class="fa fa-facebook"></i></a>
                       <a href=""><i class="fa fa-github"></i></a>
-                      <a href=""><i class="fa fa-linkedin"></i></a>
+                      <a href=""><i class="fa fa-linkedin"></i></a> -->
                     </div>
                   </div>
                 </div>
@@ -347,10 +350,10 @@
                     <h4>Gabriel Lemire</h4>
                     <span>Trésorier</span>
                     <div class="social">
-                      <a href=""><i class="fa fa-twitter"></i></a>
+                      <!-- <a href=""><i class="fa fa-twitter"></i></a>
                       <a href=""><i class="fa fa-facebook"></i></a>
                       <a href=""><i class="fa fa-github"></i></a>
-                      <a href=""><i class="fa fa-linkedin"></i></a>
+                      <a href=""><i class="fa fa-linkedin"></i></a> -->
                     </div>
                   </div>
                 </div>
@@ -367,8 +370,8 @@
         <div class="container">
           <div class="section-header">
             <h3>Contactez-nous</h3>
-            <p class="font-weight-bold compact">Le meilleur moyen de nous contacter c'est d'abord de venir nous voir en personne<br> au local de F-041 juste à côté de la caféteria!</p>
-            <p class="font-italic">Sinon, voici d'autre moyens de nous contacter :</p>
+            <p class="font-weight-bold compact">Le meilleur moyen de nous contacter c'est d'abord de venir nous voir en personne<br> au local de F-041 juste à côté de la cafeteria!</p>
+            <p class="font-italic">Sinon, voici d'autres moyens de nous contacter :</p>
           </div>
           <div class="row contact-info">
             <div class="col-md-4 left">
@@ -377,7 +380,7 @@
                 <path fill="currentColor" d="M297.216 243.2c0 15.616-11.52 28.416-26.112 28.416-14.336 0-26.112-12.8-26.112-28.416s11.52-28.416 26.112-28.416c14.592 0 26.112 12.8 26.112 28.416zm-119.552-28.416c-14.592 0-26.112 12.8-26.112 28.416s11.776 28.416 26.112 28.416c14.592 0 26.112-12.8 26.112-28.416.256-15.616-11.52-28.416-26.112-28.416zM448 52.736V512c-64.494-56.994-43.868-38.128-118.784-107.776l13.568 47.36H52.48C23.552 451.584 0 428.032 0 398.848V52.736C0 23.552 23.552 0 52.48 0h343.04C424.448 0 448 23.552 448 52.736zm-72.96 242.688c0-82.432-36.864-149.248-36.864-149.248-36.864-27.648-71.936-26.88-71.936-26.88l-3.584 4.096c43.52 13.312 63.744 32.512 63.744 32.512-60.811-33.329-132.244-33.335-191.232-7.424-9.472 4.352-15.104 7.424-15.104 7.424s21.248-20.224 67.328-33.536l-2.56-3.072s-35.072-.768-71.936 26.88c0 0-36.864 66.816-36.864 149.248 0 0 21.504 37.12 78.08 38.912 0 0 9.472-11.52 17.152-21.248-32.512-9.728-44.8-30.208-44.8-30.208 3.766 2.636 9.976 6.053 10.496 6.4 43.21 24.198 104.588 32.126 159.744 8.96 8.96-3.328 18.944-8.192 29.44-15.104 0 0-12.8 20.992-46.336 30.464 7.68 9.728 16.896 20.736 16.896 20.736 56.576-1.792 78.336-38.912 78.336-38.912z"></path>
               </svg>
               <h3>Discord</h3>
-              <p><a href="" class="btn btn-primary text-white discord">Rejoindre notre serveur</a></p>
+              <p><a href="https://discordapp.com/invite/5hcyQfx" class="btn btn-primary text-white discord">Rejoindre notre serveur</a></p>
             </div>
 
 
@@ -445,7 +448,7 @@
                 <li><i class="ion-ios-arrow-right"></i> <a href="http://lan.adeptinfo.ca">Le LAN de l'ADEPT</a></li>
                 <li><i class="ion-ios-arrow-right"></i> <a href="#about" class="btn-get-started scrollto">À propos</a></li>
                 <li><i class="ion-ios-arrow-right"></i> <a href="#services" class="btn-get-started scrollto">Nos services</a></li>
-                <li><i class="ion-ios-arrow-right"></i> <a href="#team" class="btn-get-started scrollto">Administrateurs</a></li>
+                                <li><i class="ion-ios-arrow-right"></i> <a href="https://github.com/ADEPT-Informatique/Charte/blob/master/README.md" class="btn-get-started scrollto">Charte de l'ADEPT</a></li>
               </ul>
             </div>
             <div class="col-lg-3 col-md-6 footer-contact">
@@ -481,7 +484,7 @@
           &copy; Copyright 2018 <strong class="green">ADEPT Informatique</strong>. Tous droits réservés.
         </div>
         <div class="credits">
-            Ce site web est <a href="https://github.com/adept-informatique/adeptinfo.ca">open-source</a>. Merci à <a href="https://github.com/ADEPT-Informatique/adeptinfo.ca#remerciements">tous ceux qui y ont collaborés</a> !
+            Ce site web est <a href="https://github.com/adept-informatique/adeptinfo.ca">open-source</a>. Merci à <a href="https://github.com/ADEPT-Informatique/adeptinfo.ca#remerciements">tous ceux qui y ont collaboré</a> !
         </div>
       </div>
     </footer>
