--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <!-- Bootstrap CSS File -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Libraries CSS Files -->
@@ -237,8 +238,8 @@
       <section id="facts"  class="wow fadeIn">
         <div class="container">
           <header class="section-header">
-            <h3>A propos de l'ADEPT</h3>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+            <h3>À propos de l'ADEPT</h3>
+            <p>Une <span style="font-family:consolas, Inconsolata, monospace; font-weigth: bold"><span style="color:blue">new</span> ICollection&lt;<span style="color:#17b4b0">Avantage</span>&gt;</span> pour les étudiants en informatique !<br>L'essayer c'est l'<strong>ADEPT</strong>er !</p>
           </header>
           <div class="row counters">
             <div class="col-lg-3 col-6 text-center">
@@ -485,7 +486,8 @@
         </div>
         <div class="credits">
             Ce site web est <a href="https://github.com/adept-informatique/adeptinfo.ca">open-source</a>. Merci à <a href="https://github.com/ADEPT-Informatique/adeptinfo.ca#remerciements">tous ceux qui y ont collaboré</a> !
-        </div>
+			<br><span style="color:black">Why do Java programmers wear glasses ? Because they can't C# ;)</span>
+		</div>
       </div>
     </footer>
     <!-- #footer -->
